added ziti and cookies recipes

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <div><a href="./recipes/pizza.html">Pizza</a></div>
+    <div><a href="/recipes/ziti.html">Ziti</a></div>
+    <div><a href="/recipes/cookies.html">Cookies</a></div>
 </body>
 </html>
