--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -1,12 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pizza</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="/style.css" />
+  </head>
+  <body>
+    <section id="pizzab">
+      <div class="center"><h1>Quick and easy pizza crust</h1></div>
+      <div class="center">
+        <img
+          class="center"
+          id="pimg"
+          src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9396181.jpg"
+          alt="pizza image"
+        />
+      </div>
+      <div class="center">
+        <h4>
+          This is a great recipe when you don't want to wait for the dough to
+          rise. You just mix it and allow it to rest for 5 minutes and then it's
+          ready to go! It yields a soft, chewy crust.
+        </h4>
+      </div>
+      <div class="center">
+        <ul>
+          <li>1 cup warm water (110 degrees F/45 degrees C)</li>
+          <li>1 (.25 ounce) package active dry yeast</li>
+          <li>1 teaspoon white sugar</li>
+          <li>2 ½ cups bread flour</li>
+          <li>2 tablespoons olive oil</li>
+          <li>1 teaspoon salt</li>
+        </ul>
+      </div>
+      <div class="center">
+        <div>
+          <div>
+            <h5>Directions</h5>
+          </div>
+          <ul>
+            <li>
+              <h5>Step 1</h5>
+              <p>
+                Preheat oven to 450 degrees F (230 degrees C). Lightly grease a
+                pizza pan.
+              </p>
+            </li>
+            <li>
+              <h5>Step 2</h5>
+              <p>
+                Place warm water in a bowl; add yeast and sugar. Mix and let
+                stand until creamy, about 10 minutes.
+              </p>
+            </li>
+            <li>
+              <h5>Step 3</h5>
+              <p>
+                Add flour, oil, and salt to the yeast mixture; beat until
+                smooth. You can do this by hand or use a stand mixer fitted with
+                a dough hook to make it easier. Let rest for 5 minutes.
+              </p>
+            </li>
+            <li>
+              <h5>Step 4</h5>
+              <p>
+                Turn dough out onto a lightly floured surface and pat or roll
+                into a 12-inch circle. Transfer to the prepared pizza pan.
+              </p>
+            </li>
+            <li>
+              <h5>Step 5</h5>
+              <p>Spread crust with sauce and toppings of your choice.</p>
+            </li>
+            <li>
+              <h5>Step 6</h5>
+              <p>
+                Bake in the preheated oven until golden brown, 15 to 20 minutes.
+                Remove from the oven and let cool for 5 minutes before serving.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
